fix: navbar shadow visibility

--- a/app/src/style/main.css
+++ b/app/src/style/main.css
@@ -428,7 +428,7 @@ nav {
   line-height: var(--nav-height);
 
   position: relative;
-  z-index: 5;
+  z-index: 100;
   box-shadow: 0px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
 
   .nav-text {
